--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Rubik', sans-serif;
+ /* font-family: 'Rubik', sans-serif; */
+ font-family: 'Bookman Old Style', sans-serif;
 }
 
 h1,
@@ -8,7 +9,8 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Rubik Mono One', sans-serif;
+ /* font-family: 'Rubik Mono One', sans-serif; */
+ font-family: 'Bookman Old Style', sans-serif;
 }
 
 .small {
