--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
- font-family: 'Bookman Old Style', sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
 
 h1,
@@ -8,7 +8,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Bookman Old Style', sans-serif;
+  font-family: 'Rubik Mono One', sans-serif;
 }
 
 .small {
